Сравнил с диаграммой последовательности, исправил расхождения, добавил внутреннюю ручку для обновления статуса